<resources>
    <string name="plug">Заглушка</string>
    <string name="name">Название*</string>
    <string name="addToPlaylist">Добавить в плейлист</string>
    <string name="addedToPlaylist">Добавлено в плейлист </string>
    <string name="done">создан </string>
    <string name="playList">Плейлист</string>
    <string name="buttonErrorW">Неизвестный режим ширины </string>
    <string name="buttonErrorH">Неизвестный режим высоты </string>

    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d трека</item>
    </plurals>

    <plurals name="general_minutes">
        <item quantity="one">%d минута</item>
        <item quantity="few">%d минуты</item>
        <item quantity="many">%d минут</item>
        <item quantity="other">%d минуты</item>
    </plurals>

    <string name="share">Поделиться</string>
    <string name="thereIsNoTracks">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="noTracks">Пока не добавлено ни одного трека</string>
    <string name="ok">ОК</string>
    <string name="edit">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="edited">обновлён</string>
    <string name="wantToDeletePlaylist">Хотите удалить плейлист?</string>
    <string name="sharePlayList">Поделиться плейлистом</string>
    <string name="editInfo">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="delete_track_alert">Хотите удалить трек?</string>
    <string name="yes">ДА</string>
    <string name="no">НЕТ</string>
    <string name="cansel">Отмена</string>
    <string name="end">Завершить</string>
    <string name="exit_warning_play_list">Все несохраненные данные будут потеряны</string>
    <string name="are_you_sure_pay_list">Завершить создание плейлиста?</string>
    <string name="alreadyHaveTrack">Трек уже добавлен в плейлист </string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="newPlayList">Новый плейлист</string>
    <string name="timePlug">0:00</string>
    <string name="audioStartTime">00:30</string>
    <string name="favorites">Избранные треки</string>
    <string name="notPreparedService">Сервис еще не готов</string>
    <string name="playLists">Плейлисты</string>
    <string name="emptyMedia">Ваша медиатека пуста</string>
    <string name="newPlayListText">Новый плейлист</string>
    <string name="noPlayListsText">Вы не создали \nни одного плейлиста</string>
    <string name="searchHistory">Вы искали</string>
    <string name="clearHistory">Очистить историю</string>
    <string name="app_name">PlayList_Maker_one</string>
    <string name="mediateka">Медиатека</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="genre">Жанр</string>
    <string name="country">Страна</string>
    <string name="yearPlug">0000</string>
    <string name="search">Поиск</string>
    <string name="something_went_wrong">Проблемы со связью</string>
    <string name="check_internet">Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="nothing_found">Ничего не нашлось</string>
    <string name="options">Настройки</string>
    <string name="program_name">Play list maker</string>
    <string name="dark_theme">Тёмная тема</string>
    <string name="refresh">Обновить</string>
    <string name="support">Написать в поддержку</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="users_pact">Пользовательское соглашение</string>
    <string name="plugMedia">Экран медиатеки</string>
    <string name="plugSearch">Экран поиска</string>
    <string name="linkDevelopment">Ознакомьтесь с этим курсом по андроид разработке : https://practicum.yandex.ru/android-developer/</string>
    <string name="linkAgreement">https://yandex.ru/legal/practicum_offer/</string>
    <string name="mail">s.hlopovskih@gmail.com</string>
    <string name="clearButton">Очистить текст</string>
    <string name="subjectMessage">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="gratefulMessage">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="noInternetToast">Нет подключения к интернету</string>
    <string name="notFoundPlug">not found</string>
</resources>