<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseSwitchCompatOrMaterialXml"
    android:id ="@+id/settings"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/zero"
    android:background="@color/adaptiveBackGroundWhite"
    tools:context=".ui.settings.activity.FragmentSettings"
    >

    <TextView
        android:id="@+id/toolbarSettings"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:background="@color/adaptiveBackGroundWhite"
        android:textColor="@color/adaptiveCommonText"
        android:text="@string/options"
        android:fontFamily="@font/ys_text_medium"
        android:textSize="22sp"
        android:layout_marginTop="14dp"
        android:layout_marginStart="16dp"
        />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/darkTheme"
        style="@style/settingsText"
        android:layout_marginTop="@dimen/marginTopOptions"
        android:text="@string/dark_theme"
        app:thumbTint="@color/switcher_thumb_color"
        app:trackTint="@color/switcher_track_color"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/share"
        style="@style/settingsText"
        android:layout_marginTop="141dp"
        android:text="@string/share_app"
        android:drawableEnd="@drawable/ic_share_24"
        />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/support"
        style="@style/settingsText"
        android:layout_marginTop="202dp"
        android:text="@string/support"
        android:drawableEnd="@drawable/ic_support_24"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/usersAgree"
        style="@style/settingsText"
        android:layout_marginTop="263dp"
        android:text="@string/users_pact"
        android:drawableEnd="@drawable/ic_arrowright_8"/>





</FrameLayout>