<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="UseSwitchCompatOrMaterialXml"
    android:id ="@+id/search"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    android:padding="@dimen/zero"
    android:background="@color/adaptiveBackGroundWhite"
    >
    <com.google.android.material.appbar.MaterialToolbar
        android:id="@+id/searchToolbar"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        app:navigationIcon="@drawable/ic_arrow_24"
        app:titleTextAppearance="@style/headerText"
        app:title="@string/search"
        />


    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/searchTop"
        android:paddingTop="@dimen/paddingSearch"
        android:paddingBottom="@dimen/paddingSearch"
        android:paddingStart="@dimen/marginSearch"
        android:paddingEnd="@dimen/marginSearch">

        <EditText
            android:id="@+id/search_bar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/height_36"
            android:textColor="@color/black"
            android:imeOptions="actionDone"
            android:singleLine="true"
            android:fontFamily="@font/ys_display_regular"
            android:hint="@string/search"
            android:textSize="@dimen/textNormalSize"
            android:drawableStart="@drawable/ic_search_16"
            android:drawablePadding="@dimen/paddingSearch"
            android:textColorHint="@color/TextGrey_Black"
            android:padding="8.5dp"
            android:background="@drawable/search_bg"
            android:textCursorDrawable="@drawable/cursor_color"


            />
        <ImageView
            android:id="@+id/clearButton"
            android:layout_width="@dimen/width_40"
            android:layout_height="@dimen/height_36"
            android:src="@drawable/ic_clear_16"
            android:padding="@dimen/padding_10"
            android:contentDescription="@string/clearButton"
            android:layout_gravity="end|center_vertical"
            />
    </FrameLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerViewSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="124dp"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    <TextView
        android:id="@+id/historySearchText"
        style="@style/historyText"
        android:text="@string/searchHistory"
        />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="192dp"
        android:orientation="vertical"

        >

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/historyRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>
        
        <Button
            android:id="@+id/historyClear"
            style = "@style/clearHistoryButton"
            android:text="@string/clearHistory"
            />
    
    </LinearLayout>

    <ProgressBar android:id="@+id/progressBar"
        android:layout_width="44dp"
        android:layout_height="44dp"
        android:layout_gravity="center"
        android:indeterminateTint="@color/blue"
        android:visibility="gone"/>

    <ImageView
        android:id="@+id/nothingFoundImage"
        style="@style/errorImageStyle"
        android:contentDescription="@string/nothing_found"
        android:src="@drawable/ic_nothing_found_120"/>

    <ImageView
        android:id="@+id/internetProblemImage"
        style="@style/errorImageStyle"
        android:contentDescription="@string/check_internet"
        android:src="@drawable/ic_on_failure_music_120"/>

    <TextView
        android:id="@+id/nothingFoundText"
        style="@style/errorTextStyle"
        android:text="@string/nothing_found"
        />

    <TextView
        android:id="@+id/internetProblemText"
        style="@style/errorTextStyle"
        />

    <Button
        android:id="@+id/refreshButton"
        style="@style/refreshButton"
        android:text="@string/refresh"
        />
</FrameLayout>

